<resources>
    <string name="app_name">Food Delivery Service</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="orders">Orders</string>
    <string name="restaurants">Restaurants</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="main">Main</string>
    <string name="menu">Menu</string>
    <string name="waiting">Waiting</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="price">Price:</string>
    <string name="price1">Price</string>
    <string name="amount">Amount:</string>
    <string name="total_price">Total Price:</string>
    <string name="date">Date:</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_image">Profile Image</string>
</resources>