<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/drawer_nav_favourite"
            android:icon="@drawable/ic_favourite_not_filled"
            android:title="@string/favourites" />
        <item
            android:id="@+id/drawer_nav_order"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/orders" />
        <item
            android:id="@+id/drawer_nav_restaurants"
            android:icon="@drawable/ic_menu_restaurant"
            android:title="@string/restaurants" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/drawer_nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>